# brokers

./: .gitignore  pyproject.toml
.github/workflows/: python.yml
framework/helpers/kafka/consumers/: register_events_error.py
framework/helpers/rmq/consumers/: dm_mail_sending.py
framework/internal/: singleton.py
framework/internal/http/: account.py  mail.py
framework/internal/kafka/: consumer.py  producer.py  subscriber.py
framework/internal/rmq/: consumer.py  publisher.py
tests/: conftest.py  test_registration.py
